--- a/res.css
+++ b/res.css
@@ -122,3 +122,29 @@ nav .logo{
     border-radius: 10px;
     
 }
+
+/* responsive */
+@media(max-width: 600px)
+{
+
+    .home-content{
+        /* display: block; */
+        display: inline-block;
+    }
+    .home-content img{
+        width: 250px;
+    }
+   
+    .title{
+        /* display: ; */
+        text-align: left;
+    }
+    .title h1{ font-size: 50px;margin-left: -10px; text-align: left; padding-left: 50px;}
+    .title h2{ font-size: 40px;text-align: left;padding-left: 131px;margin-top: -100px;}
+    .title p{ text-align: justify;margin-left: 100px;}
+    /* body{border-bottom: 8px;} */
+    .btn{margin-left: -300px; margin-top: 15px;}
+    
+  
+    
+}
