--- a/res.css
+++ b/res.css
@@ -139,11 +139,16 @@ nav .logo{
         /* display: ; */
         text-align: left;
     }
-    .title h1{ font-size: 50px;margin-left: -10px; text-align: left; padding-left: 50px;}
-    .title h2{ font-size: 40px;text-align: left;padding-left: 131px;margin-top: -100px;}
+    .title h1{ font-size: 50px;margin-left: -20px; text-align: left; padding-left: 50px; margin-top: -20px;}
+    .title h2{ font-size: 40px;text-align: left;padding-left: 131px;margin-top: -150px;}
     .title p{ text-align: justify;margin-left: 100px;}
     /* body{border-bottom: 8px;} */
-    .btn{margin-left: -300px; margin-top: 15px;}
+    .btn{margin-left: -300px; margin-top: 10px;}
+    body{border: 5px solid;padding-right: 65px;padding-bottom: 50px;}
+    nav ul li{margin: 2px;padding-left: -30px;padding-right: 10px;}
+    nav ul i{margin-right: 10px;}
+    nav .logo{margin-left: -90px;}
+   
     
   
     
